# squiroll

./: .gitignore  CMakeLists.txt  LICENSE  Netcode.def  README.md  build.bat  build.sh  build_old.sh  exe_icon.psd  get-sdk.sh  toolchain-clang.cmake
.github/workflows/: build.yml
Findings/: README.md  Rx0E3340.c  aocf_input.cpp  aocf_socket.cpp  packet_receive.c
compressed_nuts/new_files/: debug.nut  mod_config.nut  mod_config_animation.nut
compressed_nuts/replacement_files/: battle.nut  battle_network.nut  battle_vs_player.nut  boot.nut  character_select_animation.nut  config.nut  config_animation.nut  dialog_wait.nut  gauge_vs.nut  menu.nut  network.nut  network_animation.nut  network_component.nut  replay_select_view.nut  title.nut  version.nut
db/: Netplay.dll.rzdb
embed/: UI.nut  actor.nut  actor_create.nut  actor_rollback.nut  battle.nut  battle_network.nut  battle_team.nut  battle_vs_player.nut  boot.nut  character_select_animation.nut  config.nut  config_animation.nut  debug.nut  dialog_config.nut  dialog_wait.nut  frame_data.nut  input.nut  input_display.nut  kokoro.nut  loop.nut  menu.nut  mod_config.nut  mokou.nut  network.nut  network_animation.nut  network_component.nut  plugin.nut  replay_select_view.nut  rollback.nut  setting.nut  shot_function.nut  title.nut  version.nut  watch.nut
lobby/: Dockerfile  README.md  aocf_server.cpp  build.bat  build.sh  common.h  znet.h  zthread.h
new_files/: UI.nut  UI_common.nut  debug.nut  frame_data.nut  input_display.nut  item_config.csv  misc_config.nut  mod_config.nut  mod_config_animation.nut  mod_config_item.csv  mod_config_proc.nut  mod_config_set.nut  rollback.nut  setting.nut
replacement_files/: actor_create.nut  battle.nut  battle_network.nut  battle_practice.nut  battle_vs_player.nut  boot.nut  character_select_animation.nut  config.nut  config_animation.nut  dialog_wait.nut  gauge_vs.nut  input.nut  item.csv  item_config.csv  loop.nut  menu.nut  menu_common.nut  network.nut  network_animation.nut  network_component.nut  network_encrypted.nut  tenshi_shot.nut  title.nut  version.nut  vs.nut
src/Netcode/: D3D.h  TF4.h  alloc_man.cpp  better_game_loop.cpp  better_game_loop.h  bt.h  config.cpp  config.h  discord.cpp  discord.h  fake_lag.h  file_replacement.cpp  file_replacement.h  frame_data_display.cpp  frame_data_display.h  kite_api.h  lobby.cpp  lobby.h  log.cpp  log.h  main.cpp  misc.cpp  misc.h  netcode.cpp  netcode.h  overlay.cpp  overlay.h  patch_utils.h  plugin.cpp  rollback.cpp  rollback.h  sq_debug.cpp  sq_debug.h  sqrat.h  util.h
src/Netcode/embed/: UI.nut.h  actor.nut.h  actor_create.nut.h  battle.nut.h  battle_network.nut.h  battle_vs_player.nut.h  boot.nut.h  character_select_animation.nut.h  config.nut.h  config_animation.nut.h  debug.nut.h  dialog_config.nut.h  dialog_wait.nut.h  frame_data.nut.h  input.nut.h  input_display.nut.h  menu.nut.h  mod_config.nut.h  mokou.nut.h  network.nut.h  network_animation.nut.h  network_component.nut.h  replay_select_view.nut.h  rollback.nut.h  setting.nut.h  shot_function.nut.h  tenshi_shot.nut.h  title.nut.h  version.nut.h  vs.nut.h  watch.nut.h
src/Netcode/include/: squirrel.h
src/Netcode/new_files/: debug.nut.h  misc_config.nut.h  mod_config.nut.h  mod_config_animation.nut.h
src/Netcode/replacement_files/: battle.nut.h  battle_network.nut.h  battle_vs_player.nut.h  boot.nut.h  character_select_animation.nut.h  config.nut.h  config_animation.nut.h  dialog_wait.nut.h  gauge_vs.nut.h  menu.nut.h  network.nut.h  network_animation.nut.h  network_component.nut.h  replay_select_view.nut.h  title.nut.h  version.nut.h  watch.nut.h
src/Netcode/shaders/: hitbox_common.hlsli  hitbox_frag.cso.h  hitbox_frag.hlsl  hitbox_vert.cso.h  hitbox_vert.hlsl
src/lobby/: aocf_server.cpp  build.bat  build.sh  docker-compose.yaml  zthread.h
src/shared/: common.h  packet_types.h  shared.h  znet.h
src/th155r/: main.cpp  th155r.rc
th155r/: README.md  build.sh  main.c  main.cpp
th155r/Netcode/: AllocMan.cpp  AllocMan.h  Autopunch.cpp  Autopunch.h  CrashHandler.cpp  CrashHandler.h  PatchUtils.cpp  PatchUtils.h  alloc_man.cpp  alloc_man.h  better_game_loop.cpp  config.cpp  config.h  discord.cpp  discord.h  fake_lag.h  file_replacement.cpp  file_replacement.h  kite_api.h  kite_sqrat.h  lobby.cpp  lobby.h  log.cpp  log.h  main.c  main.cpp  netcode.cpp  netcode.h  patch_utils.cpp  patch_utils.h  plugin.cpp  plugin.h  sq_debug.cpp  sq_debug.h  util.h
th155r/Netcode/include/sqrat/: sqratArray.h  sqratClass.h  sqratClassType.h  sqratFunction.h  sqratGlobalMethods.h  sqratMemberMethods.h  sqratOverloadMethods.h  sqratTable.h  sqratTypes.h  sqratVM.h
th155r/Netcode/new_files/: debug.nut.h  mod_config.nut.h  mod_config_animation.nut.h
th155r/Netcode/replacement_files/: battle.nut.h  battle_network.nut.h  battle_practice.nut.h  battle_vs_player.nut.h  boot.nut.h  character_select_animation.nut.h  config.nut.h  config_animation.nut.h  dialog_wait.nut.h  gauge_vs.nut.h  item.csv.h  loop.nut.h  menu.nut.h  network.nut.h  network_animation.nut.h  network_component.nut.h  network_encrypted.nut.h  title.nut.h  version.nut.h  vs.nut.h
th155r/Testlib/: TestLib.c  build.sh
th155r/shared/: shared.h
tools/: CMakeLists.txt  ToByteData_linux  build.bat  build.sh  condense_nut.cpp  make_embed.cpp
